v0.6.4
- support mesh property 'two sided'
- inform user on export if vertices are not rigged to any bone
- added vertex material info mapping attributes
- Bugfix: uv corrdinates are correct for meshes where triangles are removed on import
- Bugfix: no negative values for bounding box extend
- Bugfix: proper vertex material args handling

v0.6.3 (17.1.2020)
- geometry data can now be exported to xml and ini

v0.6.2 (01.12.20)
- support for floats in xml files with ',' and '.'
- support more collision box properties (type, collision_type)

v0.6.0 (28.7.20)
- export dummy shade indices (they are needed for the mod SDK (at least for W3X))
- support for mesh sorting levels
- only display appropriate custom object properties
- support mesh flags 'cast_shadow', 'camera oriented' and 'camera aligned'
- import prelit vertex material as basic vertex material for now
- support for per face surface types via face maps
- added support for vertex colors
- Bugfix: fix import of visibility channels of armature
- Bugfix: handle multiple hlod, hierarchy and animation chunks
- Bugfix: fix export when bones are not in tree order
- Bugfix: fix export of time coded animations
- Bugfix: set hierarchy name always uppercase

v0.5.0 (10.06.20)
- use proper enums for vertex material shader properties
- create pivots for meshes on export if they have no parent bone
- create a bone for each hierarchy pivot on import (otherwise pivot order can not be maintained on roundtrip)
- reduced export time for meshes (O(n*n) -> O(n))
- handle empty/invalid/default materials correctly on export
- Bugfix: texture name got falsely '.dds' appended on export
- Bugfix: export proper opacity value of material (fixes invisible objects in W3DViewer)
- Bugfix: do not export uv coordinates if no texutre is used by the material
- Bugfix: fixed mesh triangulation on export
- Bugfix: use proper hierarchy name for animation and hlod on export

v0.4.7 (26.04.20)
- Bugfix: fixed installation issue

v0.4.6 (24.04.20)